2010-03-15  Andrew John Hughes  <ahughes@redhat.com>

	NetX/plugin build sync (2/3):
	* patches/icedtea-liveconnect-dist.patch,
	* patches/icedtea-liveconnect.patch,
	* patches/icedtea-netx.patch,
	* patches/icedtea-webstart-umask.patch,
	* patches/icedtea-webstart.patch:
	Moved to extensions subdirectory.
	* Makefile.am:
	(PLUGIN_PATCH): Removed.
	(ICEDTEA_PATCHES): Add conditional plugin patches in
	same manner as all other conditional patches.  Fix
	paths of NetX patches and LiveConnect patches.
	(stamps/plugin-tests.stamp): Depend on stamps/plugin.stamp,
	not rt-closed.jar.  Surround by ENABLE_PLUGIN rather than
	using a (now broken) test on lib/rt/netscape.
	* acinclude.m4: Add missing ;;.
	* patches/extensions/liveconnect-dist.patch:
	Was patches/icedtea-liveconnect-dist.patch.
	* patches/extensions/liveconnect.patch:
	Was patches/icedtea-liveconnect.patch.
	* patches/extensions/netx-dist.patch:
	Renamed from patches/icedtea-netx.patch.
	* patches/extensions/netx-umask.patch:
	Renamed from patches/icedtea-webstart-umask.patch.
	* patches/extensions/netx.patch:
	Renamed from patches/icedtea-webstart.patch.
+
2010-03-13  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java
	(requestPluginCookieInfo): Register cookie info as a priority message.
	(requestPluginProxyInfo): Register proxy info as a priority message.
	* plugin/icedteanp/java/sun/applet/PluginMessageConsumer.java: Re-designed
	message consumption to implement priority queuing and parallel
	initialization limits so that an arbitrary number of applets can load
	without blocking one another, all in a thread-safe manner.
	(registerPriorityWait): New method. Registers a string that is
	considered a "priority" string, which gets delegated to dedicated worker
	threads.
	(unRegisterPriorityWait): Unregisters a string so that it is no longer
	a priority.
	(PluginMessageConsumer): Do not create any workers when starting.